--- a/spiral-maker/index.html
+++ b/spiral-maker/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spiral maker</title>
     <meta name="author" content="Jesse Vogel">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
@@ -22,8 +22,12 @@
             <span>Number of rotations </span><input id="input-rotations" type="number" value="25" min="1" max="100" />
         </div>
         <div id="canvases">
-            <div><canvas width="1024" height="1024" id="canvas-puzzle"></canvas><div class="download button" style="display: none;">Download</div></div>
-            <div><canvas width="1024" height="1024" id="canvas-solution"></canvas><div class="download button" style="display: none;">Download</div></div>
+            <div><canvas width="1024" height="1024" id="canvas-puzzle"></canvas>
+                <div class="download button" style="display: none;">Download</div>
+            </div>
+            <div><canvas width="1024" height="1024" id="canvas-solution"></canvas>
+                <div class="download button" style="display: none;">Download</div>
+            </div>
         </div>
     </div>
 </body>
